[package]
name = "smart_meter_receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
opt-level = "z"

[dev-dependencies]
mockall = "0.11.1"

[dependencies]
serialport = "4.0.1"
thiserror = "1.0"
num_enum = "0.5.7"
hex = "0.4.3"
log = "0.4.17"
simplelog = "0.12.0"
rand = "0.8.5"
